design: 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + Vue</title>
-        <style></style>
+        <title>지미션 팀빌딩</title>
+        <style>
+            body{
+                -ms-overflow-style: none;
+            }
+ 
+            ::-webkit-scrollbar {
+                display: none;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
